# nabokov

./: .gitignore  LICENSE  Makefile  README.md  ansible.cfg  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
ansible/: bot.yml  deploy.yml  inventory.ini
ansible/templates/: nabokov-web.service.j2  nabokov.caddy.j2  nginx.conf.j2
bot/: .env.example  .gitignore  Makefile  README.md  deploy.yml  main.py  pyproject.toml
bot/deploy/: inventory.ini  nabokov-bot.service.j2
bot/nabokovbot/: config.py  db.py  deepseek.py  handlers.py  linting.py  prompts.py
docs/: RULES.md
site/: index.html  privacy.html  terms.html
skills/nabokov-copywriter/: SKILL.md
skills/nabokov-copywriter/evals/: RESULTS.md  evals.json
skills/nabokov-copywriter/references/: enliven.md  formulas.md  variants.md
skills/nabokov-editor/: SKILL.md
skills/nabokov-editor/references/: macro-pass.md
src/nabokov/: __init__.py  analyzer.py  cli.py  config.py  data_loader.py  issue.py  readability.py  score.py  source.py  styleprofile.py
src/nabokov/checks/: __init__.py  adverbs.py  ai_writing.py  base.py  clarity.py  concreteness.py  passive.py  phrases.py  sentences.py  style.py  usage.py
src/nabokov/data/: adverb_exceptions.json  ai_writing.json  complex_phrases.json  concreteness.json  nominalizations.json  passive_irregulars.json  qualifiers.json  thresholds.json
src/nabokov/profiles/: housel.json  mikhail.json  nabokov.json  orwell.json  patio11.json  paulgraham.json  scottalexander.json  sivers.json
src/nabokov/reporters/: __init__.py  color.py  common.py  flake8.py  github.py  json_reporter.py
tests/: classic_ref.py  conftest.py  test_ai_writing.py  test_budgets.py  test_calibration.py  test_checks.py  test_clarity.py  test_cli.py  test_config.py  test_readability.py  test_reporters.py  test_source.py  test_styleprofile.py  test_stylometry.py  test_usage.py  test_web.py
web/: manage.py
web/nabokov_web/: settings.py  urls.py  views.py  wsgi.py
