[project]
name = "nabokov"
version = "26.7.1"
description = "A console prose linter — readability checks plus opt-in AI-writing / de-slop checks. Like flake8, but for English."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mikhail Podgurskiy", email = "mikhail@viewflow.io" }]
keywords = [
    "linter",
    "prose",
    "writing",
    "humanizer",
    "unslop",
    "readability",
    "ai-detection",
    "de-slop",
    "editor",
    "nlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Linguistic",
]
# NOTE: the spaCy model (en_core_web_sm) is NOT listed here — PyPI rejects
# direct-URL dependencies. Install it once with `nabokov download-model`
# (or `python -m spacy download en_core_web_sm`). The dev group pins it below.
dependencies = [
    "spacy>=3.8,<3.9",
    "rich>=13",
    "click>=8.1",  # spaCy imports click at top level; not always pulled transitively
]

[project.urls]
Homepage = "https://github.com/viewflow/nabokov"
Repository = "https://github.com/viewflow/nabokov"
Issues = "https://github.com/viewflow/nabokov/issues"

[project.scripts]
nabokov = "nabokov.cli:main"

[dependency-groups]
dev = [
    # the model lives here (not in [project]) so `uv sync` gets it for local dev
    # and tests, while the published package stays free of direct-URL deps.
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pyright>=1.1.409",
    "pytest>=8.0",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# needed only for the dev-group model URL; the published package has no URL deps
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nabokov"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "S", "SIM", "RUF"]
ignore = ["E501", "S101", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# en/em dashes in the AI-tell regexes are intentional, not typos
"src/nabokov/checks/ai_writing.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.nabokov]
# Default configuration (also read from a project's own pyproject.toml / .nabokov.toml).
# target = "NORMAL"        # ACCESSIBLE | NORMAL | TECHNICAL
# select = ["NB"]
# ignore = []
