[project]
name = "nabokovbot"
version = "0.1.0"
description = "Telegram bot: de-slop and enliven texts with the nabokov prose linter + DeepSeek"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiogram>=3.29",
    "openai>=2.44",
    "python-dotenv>=1.2",
    "nabokov @ git+https://github.com/viewflow/nabokov.git",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nabokovbot"]
